<resources>
    <string name="app_name">ECO100</string>
    <string name="app_home">Home</string>
    <string name="app_map">Map</string>
    <string name="app_ecobox">EcoBox</string>
    <string name="app_community">Community</string>
    <string name="app_myeco">MyEco</string>
    <string name="app_search">Search</string>
    <string name="baseUrl">http://rpinas.iptime.org:10122</string>

    <!-- kr -->
    <string name="app_name_kr">에코100</string>
    <string name="home_kr">홈</string>
    <string name="map_kr">맵</string>
    <string name="ecobox_kr">에코박스</string>
    <string name="community_kr">커뮤니티</string>
    <string name="myeco_kr">마이에코</string>
    <string name="search_kr">검색</string>

    <!-- home -->
    <string name="recycle_guide01">비운다</string>
    <string name="recycle_guide02">헹군다</string>
    <string name="recycle_guide03">분리한다</string>
    <string name="recycle_guide04">섞지않는다</string>
    <string name="map_zero_text">제로웨이스트샵을 찾아서 :D</string>

    <!-- home dialog -->
    <string name="home_dialog_text01">지구를 살리는</string>
    <string name="home_dialog_text02">분리배출 핵심 4가지</string>
    <string name="home_dialog_text03">용기 안에 담겨있는 내용물은\n깨끗이 비우고 배출합니다.</string>
    <string name="home_dialog_text04">재활용품에 묻은 이물질, 음식물은\n닦거나 한 번 헹궈서 배출합니다.</string>
    <string name="home_dialog_text05">라벨 등의 다른 재질 부분은\n제거하여 배출합니다.</string>
    <string name="home_dialog_text06">종류별, 재질별로 구분하여\n분리수거함으로 배출합니다.</string>

    <!-- ecobox -->
    <string name="ecobox_faq">FAQ</string>
    <string name="btn_paper_ic_description">종이류,종이팩 버튼 아이콘</string>
    <string name="btn_glass_ic_description">유리병류 버튼 아이콘</string>
    <string name="btn_plastic_ic_description">플라스틱 버튼 아이콘</string>
    <string name="btn_can_ic_description">금속캔,고철 버튼 아이콘</string>
    <string name="btn_vinyl_ic_description">비닐류 버튼 아이콘</string>
    <string name="btn_styrofoam_ic_description">스티로폼 버튼 아이콘</string>
    <string name="faq_ic_description">FAQ 검색 아이콘</string>
    <string name="faq_arrow_description">FAQ 화살표 버튼 아이콘</string>
    <string name="content_banner_description">컨텐츠 배너</string>
    <string name="content_image_description">컨텐츠 이미지</string>
    <string name="content_floatingBtn_description">컨텐츠 링크 버튼 아이콘</string>
    <string name="zeroshop_floatingBtn_description">제로샵 링크 버튼 아이콘</string>
    <string name="zeroshop_banner_description">제로샵 배너</string>
    <string name="zeroshop_num_description">제로샵 전화번호 아이콘</string>
    <string name="zeroshop_adress_description">제로샵 주소 아이콘</string>
    <string name="zeroshop_runtime_description">제로샵 운영시간 아이콘</string>


    <string name="zeroshop_website_description">제로샵 웹사이트 아이콘</string>

    <string name="ecobox_paper">종이류,종이팩</string>
    <string name="ecobox_glass">유리병류</string>
    <string name="ecobox_plastic">플라스틱</string>
    <string name="ecobox_can">금속캔,고철</string>
    <string name="ecobox_vinyl">비닐류</string>
    <string name="ecobox_styrofoam">스티로폼</string>
    <string name="ecobox_guide_paper_description">종이 가이드 이미지</string>
    <string name="ecobox_guide_glass_description">유리병 가이드 이미지</string>
    <string name="ecobox_guide_plastic_description">플라스틱 가이드 이미지</string>
    <string name="ecobox_guide_can_description">캔고철 가이드 이미지</string>
    <string name="ecobox_guide_vinyl_description">비닐가이드 이미지</string>
    <string name="ecobox_guide_styrofoam_description">스티로폼 가이드 이미지</string>

    <string name="content_category">[다큐]</string>
    <string name="content_title">분리수거가 당신에게 가르쳐 주지 않는 것</string>
    <string name="content_detail_info_title">기본 정보</string>
    <string name="content_detail_info">- 안녕하세요! 한국석유공사입니다!\n2021년 환경과 사회를 생각하는 한국석유공사 기업광고 포스터 공모전이 개최됩니다.\n대한민국 대표 에너지 공기업 한국석유공사의 이미지를 만들어줄 기가막힌 포스터를 애타게 기다리고 있습니다. \n여러분들의 참신한 표현력과 놀라운 금손 능력 맘껏 뽐내주세요! \n여러분의 많은 관심과 사랑 원해요!</string>
    <string name="content_detail_guide">우측링크 아이콘을 누르면 해당정보사이트로 이동됩니다.</string>
    <string name="zeroshop_detail_site_guide">• 집모양 옆 링크 터치시 해당정보사이트로 이동됩니다.</string>
    <string name="zeroshop_detail_map_guide">• 우측하단 링크 아이콘을 누르면 [맵]탭-제로샵페이지로 이동됩니다.</string>


    <!-- popup -->
    <string name="popup_confirm">확인</string>
    <string name="popup_cancel">취소</string>
    <string name="popup_delete">삭제</string>
    <string name="popup_write">등록하기</string>

    <!-- signup -->
    <string name="popup_join_welcome_title">환영합니다. 가입되셨습니다 :)</string>
    <string name="popup_join_welcome_text">에코백에 가입되셨으므로,\n참여게시판과 챌린지 활동이 가능합니다:)</string>
    <string name="popup_join_ask_title">회원가입이 필요한 서비스입니다:)</string>
    <string name="popup_join_ask_text">커뮤니티, 챌린지 이용은 가입이 필요합니다.\n가입하시겠습니까?</string>

    <!-- login -->
    <string name="popup_login_ask_title">로그인이 필요합니다 :D</string>
    <string name="popup_login_ask_text">로그인이 필요한 서비스입니다~\n계속해서 이용하시겠습니까?</string>

    <!-- logout -->
    <string name="popup_logout_title">로그아웃하시겠습니까?</string>
    <string name="popup_logout_text">로그아웃 하시겠습니까?\n커뮤니티 활동은 재로그인이 필요합니다:)</string>

    <!-- board -->
    <string name="popup_board_register_title">등록하시겠습니까?</string>
    <string name="popup_board_register_text">작성하신 글을 등록하시겠습니까?\n등록 후 수정 및 삭제가 가능합니다:)</string>

    <!-- challenge -->
    <string name="popup_challenge_register_title">챌린지를 등록하시겠습니까?</string>
    <string name="popup_challenge_register_text">챌리지를 등록하시겠습니까?\n등록된 챌린지는 수정만 가능합니다.</string>
    <string name="write_challenge_hint">챌린지 소감을 작성해주세요(최대 200자)</string>
    <string name="popup_challenge_warning_title">사진 업로드</string>
    <string name="popup_challenge_warning_text">챌린지에 맞는 사진을 등록해주세요</string>

    <!-- map -->
    <string name="map_shop">종량제판매처</string>
    <string name="map_zero_shop">제로웨이스트샵</string>
    <string name="map_open_list">목록열기</string>
    <string name="map_close_list">지도보기</string>
    <string name="map_user_location">나 여기!</string>
    <string name="map_list_shop_name_ex">알맹상점</string>
    <string name="map_list_shop_description_ex">껍데기는 가라! 알맹이만 오라! 리필스테이션</string>
    <string name="map_list_shop_address_ex">서울특별시 마포구 월드컵로 49 2층 알맹상점</string>

    <!-- search -->
    <string name="search_title">How to Recycle?</string>
    <string name="search_input_hint">검색어를 입력해주세요 :)</string>
    <string name="search_sub_title">SEARCH ECO INFORMATION</string>
    <string name="search_text">분리배출방법이 궁금한 항목을 검색창에 입력하세요!\n관련 정보를 확인 할 수 있습니다.</string>
    <string name="search_info">* 해당 데이터는 제주특별자치도 제주시_재활용품 분리배출\n 사전정보에서 제공받았습니다.</string>


    <!-- mypage -->
    <string name="popup_mypage_del_ask_title">글을 삭제하시겠습니까?</string>
    <string name="popup_mypage_del_ask_text">작성한 글을 삭제할까요?\n삭제 후에는 복구불가하니 신중히 선택해주세요.</string>
    <string name="popup_mypage_del_comment_ask_title">댓글을 삭제하시겠습니까?</string>
    <string name="popup_mypage_del_comment_ask_text">작성한 댓글을 삭제할까요?\n삭제 후에는 복구불가하니 신중히 선택해주세요.</string>
    <string name="mypage_eco100_info">ECO100 앱은 올바른 분리 수거 정보 제공 및 사용자 간의 환경 보호 정보 공유를 위한 어플리케이션입니다.</string>
    <string name="mypage_eco100_info1"> 기후변화를 비롯한 환경 문제들이 2020년대에 인류가 맞닥뜨릴 가능성이 가장 높은 세계적 위험 요소로 대두\n되었습니다. 환경 보호를 위하여 어떻게 하면\n어렵지 않고 친근하게 접근할 수 있는지, 사용자가 직접\n환경 보호를 위한 행동을 실천하고 함께 공유하므로써 서로 연대를 갖고 지속해나가길 바라며 만든 앱입니다.
    </string>
    <string name="mypage_eco100_info2"> ECO100팀은 2021년도 서울형뉴딜일자리청년사업단 프로젝트로 만들어진 1명의 디자이너와 4명의 개발자로 구성된 팀입니다. </string>
    <string name="mypage_eco100_info3"> 마스코트인 에코덕은 마포구의 상징인 청둥오리에서 영감을 받아, 환경을 수호하는 캐릭터로 재탄생되었습니다.</string>
    <!-- popup loading -->
    <string name="popup_loading_title">조금만 기다려 주세요:)</string>
    <string name="popup_loading_text">환경을 지키는 에코덕이 포다닥 날아\n정보를 물어오는중~ 조금만 기다려주세요:D</string>

    <!-- img description -->
    <string name="string_value">이미지 불러오기 실패</string>

    <!-- dialog description -->
    <string name="dialog_title">Wi-Fi ERROR!!</string>
    <string name="dialog_text">네트워크가 연결되지 않았습니다.\nWi-Fi 또는 데이터를 활성화 해주세요.</string>

    <!-- google map key -->
    <string name="google_map_key">AIzaSyAD0lEYAwSOvfdlZ5Mioz_SvFAq_mz0vmo</string>

    <!-- kakao app key -->
    <string name="kakao_app_key">kakao27c8e2d5025be3e8979d18947a200d88</string>
    <string name="title_activity_my_eco100">MyEco100Activity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- enrollpage description -->
    <string name="enroll_page_text">안녕하세요. 에코백입니다\n\n지속가능한 환경실천을 위하여
        자신만의 유용한 정보들을 공유하는 소통하는 장이 되었으면 합니다.</string>

</resources>