<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- contents -->
    <FrameLayout
        android:id="@+id/contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab"
        />

    <!-- bottom -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        style="@style/TabLayout.ItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_72dp"
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/size_8dp"
        app:tabRippleColor="@color/primary_color_dark">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_home_40dp"
            android:text="@string/home_kr" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_ecobox_40dp"
            android:text="@string/ecobox_kr" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_community_40dp"
            android:text="@string/community_kr" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_map_40dp"
            android:text="@string/map_kr" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_myeco_40dp"
            android:text="@string/myeco_kr" />
    </com.google.android.material.tabs.TabLayout>
</RelativeLayout>