<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_32dp"
                android:layout_marginRight="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_can"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_can_ic_description"
                        android:drawableTop="@drawable/ic_ecobox_can"
                        android:text="@string/ecobox_can"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_vinyl"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_vinyl_ic_description"
                        android:drawableTop="@drawable/ic_ecobox_vinyl"
                        android:paddingLeft="@dimen/padding_24dp"
                        android:paddingRight="@dimen/padding_10dp"
                        android:text="@string/ecobox_vinyl"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_styrofoam"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_styrofoam_ic_description"
                        android:drawableTop="@drawable/ic_ecobox_styrofoam"
                        android:text="@string/ecobox_styrofoam"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_paper"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_paper_ic_description"
                        android:drawableTop="@drawable/ic_ecobox_paper"
                        android:text="@string/ecobox_paper"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_glass"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_glass_ic_description"
                        android:drawableTop="@drawable/ic_ecobox_glass"
                        android:paddingLeft="@dimen/padding_10dp"
                        android:paddingRight="@dimen/padding_32dp"
                        android:text="@string/ecobox_glass"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_plastic"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_plastic_ic_description"
                        android:drawableTop="@drawable/ic_ecobox_plastic"
                        android:text="@string/ecobox_plastic"
                        android:textColor="@color/black" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ecobox_faq_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary_on_color">

                <TextView
                    android:id="@+id/faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginTop="@dimen/margin_12dp"
                    android:layout_marginBottom="@dimen/margin_12dp"
                    android:text="@string/ecobox_faq"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/search_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:autofillHints="username"
                    android:backgroundTint="@color/white"
                    android:ems="8"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/search_ic"
                    app:layout_constraintStart_toEndOf="@+id/faq"
                    app:layout_constraintTop_toTopOf="parent"></EditText>

                <ImageView
                    android:id="@+id/search_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/search_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/search_edit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_25dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

</LinearLayout>


