<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_popup_background"
    android:orientation="vertical">

    <TextView
        style="@style/CommonPopup.TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginVertical="@dimen/margin_24dp"
        android:text="@string/popup_login_ask_title" />

    <TextView
        style="@style/CommonPopup.TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:text="@string/popup_login_ask_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_82dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_12dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_weight="1"
            android:background="@drawable/popup_btn_left"
            android:text="@string/popup_cancel" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/size_38dp"
                android:layout_height="@dimen/size_38dp"
                android:layout_gravity="top|right"
                android:layout_marginEnd="@dimen/margin_38dp"
                android:src="@drawable/img_popup_btn_ecoduck"
                android:contentDescription="@string/string_value"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:background="@drawable/popup_btn_right"
                android:text="@string/popup_confirm" />

        </FrameLayout>
    </LinearLayout>

</LinearLayout>